<resources>
    <string name="app_name">LightNovel</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="mo">mo</string>
    <string name="dong">dong</string>
    <string name="search">search</string>
    <string name="sa_ng_ta_c">Sáng tác</string>
    <string name="convert">Convert</string>
    <string name="danh_sa_ch">Danh sách</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="ta_i_khoa_n">Tài khoản</string>
    <string name="truy_n_y_u_thi_ch">Truyện yêu thích</string>
    <string name="a_thi_ch">Ưa thích</string>
    <string name="truyenyeuthich">truyện yêu thích</string>
    <string name="todo">TODO</string>
    <string name="th_ng_ba_o">Thông báo</string>
    <string name="tha_o_lu_n">Thảo luận</string>
    <string name="tha_o_lu_n_truy_n">Thảo luận truyện</string>
    <string name="th_ng_tin_b_t_bu_c">* Thông tin bắt buộc</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="or">Or</string>
    <string name="facebook_app_id">2018437675107829</string>
    <string name="fb_login_protocol_scheme">fb2018437675107829</string>
    <string name="facebook">Facebook</string>
    <string name="server_client_id">1064379788035-bcq6ii89sr42dr945hevhoqd5epl41p0.apps.googleusercontent.com</string>
    <string name="google">Google</string>
    <string name="logout">Logout</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="hoten">Họ và tên</string>
    <string name="dangky">Đăng ký</string>
    <string name="email">Email</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="usernamehoacpassword">Username hoặc password không chính xác</string>
    <string name="chuongmoinhat">Chương mới nhất</string>
    <string name="sangtacnoibat">Sáng tác nổi bật</string>
    <string name="truyenmoi">Truyện mới</string>
</resources>
