<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diorous.lightnovel.View.DangNhapDangKy.DangNhapDangKyActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/overload"/>
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/th_ng_tin_b_t_bu_c"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilusernamedn"
                android:layout_margin="10dp"
                android:textColorHint="#808080"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.diorous.lightnovel.CustomView.CustomEdittextClear
                    android:id="@+id/usernamedn"
                    android:textColor="@color/black"
                    android:hint="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:validateText="true"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilpassworddn"
                android:layout_margin="10dp"
                android:textColorHint="#808080"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.diorous.lightnovel.CustomView.CustomVisibleEdittext
                    android:id="@+id/passsworddn"
                    android:textColor="@color/black"
                    android:hint="@string/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtloi"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:textColor="@color/red"
                android:text="@string/usernamehoacpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btndangnhap"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dangnhap"/>


            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="0.1dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/black" />
                <View
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="0.1dp">

                </View>
            </LinearLayout>

                <Button
                    android:layout_margin="10dp"
                    android:id="@+id/btndangnhapfb"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_facebook"
                    android:textAllCaps="false"
                    android:text="@string/facebook"
                    android:background="@color/colorfb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btndangnhapgg"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:drawableStart="@drawable/google"
                    android:textAllCaps="false"
                    android:text="@string/google"
                    android:background="@color/colorGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


        </LinearLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>
