<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/chuongmoinhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/chuongmoinhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/sangtacnoibat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/sangtacnoibat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>


        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/truyenmoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/truyenmoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</RelativeLayout>