<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentbg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimary">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbartrangchu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    >
                </android.support.v7.widget.Toolbar>
                <TextView
                    android:textSize="20sp"
                    android:id="@+id/tittletrangchuactivity"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textStyle="bold"
                    android:text="@string/ta_i_khoa_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/reldangnhap"
            android:orientation="horizontal"
            android:background="@color/dangnhap"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <ImageView
                android:id="@+id/imgperson"
                android:src="@drawable/ic_person_white_36dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:background="@color/dangnhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txtdangnhap"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:layout_toEndOf="@+id/imgperson"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dangnhap"
                tools:ignore="RelativeOverlap" />
            <ImageView
                android:id="@+id/imgArrowWhile"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_keyboard_arrow_right_white_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:clickable="true"
            android:id="@+id/reluathich"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_ripple_relative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="true">
            <ImageView
                android:id="@+id/imgfavo"
                android:src="@drawable/ic_favorite_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />
            <TextView
                android:gravity="center"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:textColor="@color/actionbarColor"
                android:layout_toEndOf="@+id/imgfavo"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/a_thi_ch"/>
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:text="@string/truyenyeuthich"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imgarrowright"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/imgarrowright"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/keyboard_arrow_right_grey_18x18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RelativeLayout>
        <View
            android:id="@+id/myview"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/dark_gray"
            />
        <RelativeLayout
            android:clickable="true"
            android:id="@+id/relthongbao"
            android:background="@drawable/custom_ripple_relative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="true">
            <ImageView
                android:id="@+id/imgfavo1"
                android:src="@drawable/ic_notifications_colorprimary_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />
            <TextView
                android:gravity="center"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:textColor="@color/actionbarColor"
                android:layout_toEndOf="@+id/imgfavo1"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/th_ng_ba_o"/>
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:text="@string/th_ng_ba_o"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imgarrowright1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/imgarrowright1"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/keyboard_arrow_right_grey_18x18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RelativeLayout>
        <View
            android:id="@+id/myview1"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/dark_gray"
            />
        <RelativeLayout
            android:clickable="true"
            android:id="@+id/relthaoluan"
            android:background="@drawable/custom_ripple_relative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="true">
            <ImageView
                android:id="@+id/imgfavo2"
                android:src="@drawable/ic_chat_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />
            <TextView
                android:gravity="center"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:textColor="@color/actionbarColor"
                android:layout_toEndOf="@+id/imgfavo2"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tha_o_lu_n"/>
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:text="@string/tha_o_lu_n_truy_n"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imgarrowright2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/imgarrowright2"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/keyboard_arrow_right_grey_18x18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:id="@+id/reldangxuat"
            android:background="@drawable/custom_ripple_relative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="true">
            <ImageView
                android:id="@+id/imgfavo3"
                android:src="@drawable/ic_exit_to_app_white_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />
            <TextView
                android:gravity="center"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:textColor="@color/cam"
                android:layout_toEndOf="@+id/imgfavo3"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/logout"/>
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:text="@string/ng_xu_t"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imgarrowright3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/imgarrowright3"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/keyboard_arrow_right_grey_18x18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>